--- a/Jumony.Demo.SimpleTodo/Jumony.Demo.SimpleTodo.csproj
+++ b/Jumony.Demo.SimpleTodo/Jumony.Demo.SimpleTodo.csproj
@@ -112,7 +112,7 @@
   <ItemGroup>
     <Compile Include="SimpleTodoAreaRegistration.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
-    <Compile Include="Task.cs" />
+    <Compile Include="TodoTask.cs" />
     <Compile Include="TodoController.cs" />
   </ItemGroup>
   <ItemGroup>
