更新所有组件版本

--- a/WebSite/Web.config
+++ b/WebSite/Web.config
@@ -5,38 +5,49 @@
   -->
 <configuration>
   <connectionStrings>
-    <add name="Database" connectionString="Data Source=(LocalDB)\v11.0;AttachDbFilename=|DataDirectory|\Database.mdf;Integrated Security=True"
-      providerName="SqlClient"/>
+    <add name="Database" connectionString="Data Source=(LocalDB)\v11.0;AttachDbFilename=|DataDirectory|\Database.mdf;Integrated Security=True" providerName="SqlClient" />
   </connectionStrings>
   <system.web>
     <compilation debug="true" targetFramework="4.5">
       <assemblies>
-        <add assembly="System.Web.Routing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=31BF3856AD364E35"/>
+        <add assembly="System.Web.Routing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=31BF3856AD364E35" />
       </assemblies>
     </compilation>
-    <httpRuntime/>
+    <httpRuntime />
     <pages controlRenderingCompatibilityVersion="4.0">
       <namespaces>
-        <add namespace="Ivony.Web"/>
-        <add namespace="Ivony.Html.Web"/>
-        <add namespace="Ivony.Html"/>
-        <add namespace="Ivony.Fluent"/>
-        <add namespace="System.Web.Mvc"/>
+        <add namespace="Ivony.Web" />
+        <add namespace="Ivony.Html.Web" />
+        <add namespace="Ivony.Html" />
+        <add namespace="Ivony.Fluent" />
+        <add namespace="System.Web.Mvc" />
       </namespaces>
     </pages>
-    <trace enabled="true" mostRecent="true" requestLimit="1000" writeToDiagnosticsTrace="true"/>
-    <customErrors mode="Off"/>
+    <trace enabled="true" mostRecent="true" requestLimit="1000" writeToDiagnosticsTrace="true" />
+    <customErrors mode="Off" />
   </system.web>
   <system.webServer>
     <defaultDocument>
       <files>
-        <clear/>
+        <clear />
       </files>
     </defaultDocument>
-    <modules runAllManagedModulesForAllRequests="true"/>
+    <modules runAllManagedModulesForAllRequests="true" />
   </system.webServer>
   <runtime>
     <assemblyBinding xmlns="urn:schemas-microsoft-com:asm.v1">
+      <dependentAssembly>
+        <assemblyIdentity name="System.Web.Helpers" publicKeyToken="31bf3856ad364e35" />
+        <bindingRedirect oldVersion="1.0.0.0-3.0.0.0" newVersion="3.0.0.0" />
+      </dependentAssembly>
+      <dependentAssembly>
+        <assemblyIdentity name="System.Web.WebPages" publicKeyToken="31bf3856ad364e35" />
+        <bindingRedirect oldVersion="1.0.0.0-3.0.0.0" newVersion="3.0.0.0" />
+      </dependentAssembly>
+      <dependentAssembly>
+        <assemblyIdentity name="System.Web.Mvc" publicKeyToken="31bf3856ad364e35" />
+        <bindingRedirect oldVersion="0.0.0.0-5.1.0.0" newVersion="5.1.0.0" />
+      </dependentAssembly>
     </assemblyBinding>
   </runtime>
 </configuration>
