--- a/Jumony.Demo.HelpCenter/packages.config
+++ b/Jumony.Demo.HelpCenter/packages.config
@@ -1,14 +1,14 @@
 ﻿<?xml version="1.0" encoding="utf-8"?>
 <packages>
-  <package id="DbUtility3" version="3.1.0.1-beta" targetFramework="net45" />
+  <package id="DbUtility3" version="3.1.1" targetFramework="net45" />
   <package id="Ivony.Core" version="1.1.0" targetFramework="net45" />
   <package id="Ivony.Web" version="1.2" targetFramework="net45" />
-  <package id="Ivony.Web.Mvc" version="1.0" targetFramework="net45" />
+  <package id="Ivony.Web.Mvc" version="1.0.1" targetFramework="net45" />
   <package id="Jumony.Core" version="3.0.10.0" targetFramework="net45" />
   <package id="Jumony.Models" version="3.0.0.0" targetFramework="net45" />
-  <package id="Jumony.Web" version="3.1.7-alpha" targetFramework="net45" />
-  <package id="Microsoft.AspNet.Mvc" version="3.0.20105.1" targetFramework="net45" />
-  <package id="Microsoft.AspNet.Razor" version="1.0.20105.408" targetFramework="net45" />
-  <package id="Microsoft.AspNet.WebPages" version="1.0.20105.408" targetFramework="net45" />
+  <package id="Jumony.Web" version="3.1.7.1-alpha" targetFramework="net45" />
+  <package id="Microsoft.AspNet.Mvc" version="5.1.2" targetFramework="net45" />
+  <package id="Microsoft.AspNet.Razor" version="3.1.2" targetFramework="net45" />
+  <package id="Microsoft.AspNet.WebPages" version="3.1.2" targetFramework="net45" />
   <package id="Microsoft.Web.Infrastructure" version="1.0.0.0" targetFramework="net45" />
 </packages>
