--- a/packages/repositories.config
+++ b/packages/repositories.config
@@ -3,5 +3,6 @@
   <repository path="..\Jumony.Demo.DomViewer\packages.config" />
   <repository path="..\Jumony.Demo.HelpCenter\packages.config" />
   <repository path="..\Jumony.Demo.SimpleTodo\packages.config" />
+  <repository path="..\Jumony.Demo.Site\packages.config" />
   <repository path="..\WebSite\packages.config" />
 </repositories>
