--- a/WebSite/Web.config
+++ b/WebSite/Web.config
@@ -23,15 +23,10 @@
         <add namespace="System.Web.Mvc" />
       </namespaces>
     </pages>
-    <trace enabled="true" mostRecent="true" requestLimit="1000" writeToDiagnosticsTrace="true" />
+    <trace enabled="true" localOnly="false" mostRecent="true" requestLimit="1000" writeToDiagnosticsTrace="true" />
     <customErrors mode="Off" />
   </system.web>
   <system.webServer>
-    <defaultDocument>
-      <files>
-        <clear />
-      </files>
-    </defaultDocument>
     <modules runAllManagedModulesForAllRequests="true" />
   </system.webServer>
   <runtime>
