完善登录功能。

--- a/Jumony.Demo.HelpCenter/Jumony.Demo.HelpCenter.csproj
+++ b/Jumony.Demo.HelpCenter/Jumony.Demo.HelpCenter.csproj
@@ -116,6 +116,8 @@
   <ItemGroup>
     <Compile Include="HelpAreaRegistration.cs" />
     <Compile Include="HelpController.cs" />
+    <Compile Include="HelpDocumentProvider.cs" />
+    <Compile Include="HelpManagerController.cs" />
     <Compile Include="HelpTopic.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
   </ItemGroup>
