--- a/WebSite/Web.config
+++ b/WebSite/Web.config
@@ -12,6 +12,9 @@
       <assemblies>
         <add assembly="System.Web.Routing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=31BF3856AD364E35" />
       </assemblies>
+      <buildProviders>
+        <add type="Ivony.Html.Web.HtmlBuildProvider" extension=".html" />
+      </buildProviders>
     </compilation>
     <httpRuntime />
     <pages controlRenderingCompatibilityVersion="4.0">
