--- a/Jumony.Demo.SimpleTodo/packages.config
+++ b/Jumony.Demo.SimpleTodo/packages.config
@@ -1,12 +1,12 @@
 ﻿<?xml version="1.0" encoding="utf-8"?>
 <packages>
-  <package id="DbUtility3" version="3.2" targetFramework="net45" />
+  <package id="DbWrench" version="4.4.2" targetFramework="net45" />
   <package id="Ivony.Core" version="1.1.0" targetFramework="net45" />
-  <package id="Ivony.Web" version="1.3" targetFramework="net45" />
-  <package id="Ivony.Web.Mvc" version="1.0.2" targetFramework="net45" />
-  <package id="Jumony.Core" version="3.0.11" targetFramework="net45" />
-  <package id="Jumony.Models" version="3.0.1" targetFramework="net45" />
-  <package id="Jumony.Web" version="3.1.10-alpha" targetFramework="net45" />
+  <package id="Ivony.Web" version="1.3.1" targetFramework="net45" />
+  <package id="Ivony.Web.Mvc" version="1.0.2.1" targetFramework="net45" />
+  <package id="Jumony.Core" version="3.0.15" targetFramework="net45" />
+  <package id="Jumony.Models" version="3.1.1" targetFramework="net45" />
+  <package id="Jumony.Web" version="3.1.11.2" targetFramework="net45" />
   <package id="Microsoft.AspNet.Mvc" version="5.1.2" targetFramework="net45" />
   <package id="Microsoft.AspNet.Razor" version="3.1.2" targetFramework="net45" />
   <package id="Microsoft.AspNet.WebPages" version="3.1.2" targetFramework="net45" />
