--- a/packages/repositories.config
+++ b/packages/repositories.config
@@ -1,9 +1,9 @@
 ﻿<?xml version="1.0" encoding="utf-8"?>
 <repositories>
   <repository path="..\Jumony.Demo.DomViewer\packages.config" />
+  <repository path="..\Jumony.Demo.FSharp\packages.config" />
   <repository path="..\Jumony.Demo.HelpCenter\packages.config" />
   <repository path="..\Jumony.Demo.SimpleTodo\packages.config" />
   <repository path="..\Jumony.Demo.Site\packages.config" />
-  <repository path="..\WebApplication1\packages.config" />
   <repository path="..\WebSite\packages.config" />
 </repositories>
